feat(search): 통합 검색 구현 (#86)